base and category

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME=Cobtainlife
 APP_ENV=production
 APP_KEY=base64:bmePbTCBFgadA7AJHhoMXW+B6AFf1cGf+qtB5PlA7UU=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=https://cobtainlife.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
