--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,11 @@
     "/js/admin/app.js": "/js/admin/app.js",
     "/js/admin/categories/index.js": "/js/admin/categories/index.js",
     "/js/admin/categories/add.js": "/js/admin/categories/add.js",
+    "/js/admin/products/index.js": "/js/admin/products/index.js",
+    "/js/admin/products/add.js": "/js/admin/products/add.js",
+    "/js/admin/products/tinymce.js": "/js/admin/products/tinymce.js",
+    "/css/admin/products/index.css": "/css/admin/products/index.css",
+    "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
     "/css/admin/app.css": "/css/admin/app.css"
 }
