--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,9 @@
     "/js/admin/products/index.js": "/js/admin/products/index.js",
     "/js/admin/products/add.js": "/js/admin/products/add.js",
     "/js/admin/products/tinymce.js": "/js/admin/products/tinymce.js",
+    "/js/admin/orders/index.js": "/js/admin/orders/index.js",
+    "/js/admin/orders/add.js": "/js/admin/orders/add.js",
+    "/js/admin/orders/products.js": "/js/admin/orders/products.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
