--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,6 +8,9 @@
     "/js/admin/orders/index.js": "/js/admin/orders/index.js",
     "/js/admin/orders/add.js": "/js/admin/orders/add.js",
     "/js/admin/orders/products.js": "/js/admin/orders/products.js",
+    "/js/admin/order_status/index.js": "/js/admin/order_status/index.js",
+    "/js/admin/order_status/add.js": "/js/admin/order_status/add.js",
+    "/js/admin/order_status/edit.js": "/js/admin/order_status/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
