--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,6 +11,9 @@
     "/js/admin/order_status/index.js": "/js/admin/order_status/index.js",
     "/js/admin/order_status/add.js": "/js/admin/order_status/add.js",
     "/js/admin/order_status/edit.js": "/js/admin/order_status/edit.js",
+    "/js/admin/shipping_status/index.js": "/js/admin/shipping_status/index.js",
+    "/js/admin/shipping_status/add.js": "/js/admin/shipping_status/add.js",
+    "/js/admin/shipping_status/edit.js": "/js/admin/shipping_status/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
