--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,6 +14,9 @@
     "/js/admin/shipping_status/index.js": "/js/admin/shipping_status/index.js",
     "/js/admin/shipping_status/add.js": "/js/admin/shipping_status/add.js",
     "/js/admin/shipping_status/edit.js": "/js/admin/shipping_status/edit.js",
+    "/js/admin/payment_status/index.js": "/js/admin/payment_status/index.js",
+    "/js/admin/payment_status/add.js": "/js/admin/payment_status/add.js",
+    "/js/admin/payment_status/edit.js": "/js/admin/payment_status/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
