--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,6 +17,9 @@
     "/js/admin/payment_status/index.js": "/js/admin/payment_status/index.js",
     "/js/admin/payment_status/add.js": "/js/admin/payment_status/add.js",
     "/js/admin/payment_status/edit.js": "/js/admin/payment_status/edit.js",
+    "/js/admin/weight_class/index.js": "/js/admin/weight_class/index.js",
+    "/js/admin/weight_class/add.js": "/js/admin/weight_class/add.js",
+    "/js/admin/weight_class/edit.js": "/js/admin/weight_class/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
