--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,9 @@
     "/js/admin/weight_class/index.js": "/js/admin/weight_class/index.js",
     "/js/admin/weight_class/add.js": "/js/admin/weight_class/add.js",
     "/js/admin/weight_class/edit.js": "/js/admin/weight_class/edit.js",
+    "/js/admin/length_class/index.js": "/js/admin/length_class/index.js",
+    "/js/admin/length_class/add.js": "/js/admin/length_class/add.js",
+    "/js/admin/length_class/edit.js": "/js/admin/length_class/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
