--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -23,6 +23,9 @@
     "/js/admin/length_class/index.js": "/js/admin/length_class/index.js",
     "/js/admin/length_class/add.js": "/js/admin/length_class/add.js",
     "/js/admin/length_class/edit.js": "/js/admin/length_class/edit.js",
+    "/js/admin/tax/index.js": "/js/admin/tax/index.js",
+    "/js/admin/tax/add.js": "/js/admin/tax/add.js",
+    "/js/admin/tax/edit.js": "/js/admin/tax/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
