--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -26,6 +26,9 @@
     "/js/admin/tax/index.js": "/js/admin/tax/index.js",
     "/js/admin/tax/add.js": "/js/admin/tax/add.js",
     "/js/admin/tax/edit.js": "/js/admin/tax/edit.js",
+    "/js/admin/attribute_group/index.js": "/js/admin/attribute_group/index.js",
+    "/js/admin/attribute_group/add.js": "/js/admin/attribute_group/add.js",
+    "/js/admin/attribute_group/edit.js": "/js/admin/attribute_group/edit.js",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
