--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -29,6 +29,8 @@
     "/js/admin/attribute_group/index.js": "/js/admin/attribute_group/index.js",
     "/js/admin/attribute_group/add.js": "/js/admin/attribute_group/add.js",
     "/js/admin/attribute_group/edit.js": "/js/admin/attribute_group/edit.js",
+    "/js/web/products/index.js": "/js/web/products/index.js",
+    "/css/web/products/index.css": "/css/web/products/index.css",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
