--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -37,11 +37,13 @@
     "/js/web/app.js": "/js/web/app.js",
     "/js/web/checkout.js": "/js/web/checkout.js",
     "/js/web/wishlist.js": "/js/web/wishlist.js",
+    "/js/web/compare.js": "/js/web/compare.js",
     "/css/web/products/index.css": "/css/web/products/index.css",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/categories/add.css": "/css/admin/categories/add.css",
     "/css/admin/app.css": "/css/admin/app.css",
+    "/css/web/compare/products.css": "/css/web/compare/products.css",
     "/css/web/wishlist/products.css": "/css/web/wishlist/products.css",
     "/css/web/app.css": "/css/web/app.css",
     "/css/web/products/detail.css": "/css/web/products/detail.css"
