--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -40,6 +40,7 @@
     "/js/admin/attribute_group/index.js": "/js/admin/attribute_group/index.js",
     "/js/admin/attribute_group/add.js": "/js/admin/attribute_group/add.js",
     "/js/admin/attribute_group/edit.js": "/js/admin/attribute_group/edit.js",
+    "/js/admin/configs/index.js": "/js/admin/configs/index.js",
     "/js/web/products/index.js": "/js/web/products/index.js",
     "/js/web/products/detail.js": "/js/web/products/detail.js",
     "/js/web/common/local_storage.js": "/js/web/common/local_storage.js",
@@ -60,6 +61,7 @@
     "/css/web/app.css": "/css/web/app.css",
     "/css/web/products/detail.css": "/css/web/products/detail.css",
     "/css/web/products/index.css": "/css/web/products/index.css",
+    "/css/admin/configs/index.css": "/css/admin/configs/index.css",
     "/css/admin/products/index.css": "/css/admin/products/index.css",
     "/css/admin/products/add.css": "/css/admin/products/add.css",
     "/css/admin/news/index.css": "/css/admin/news/index.css",
