--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,6 +11,7 @@
     "/js/admin/brands/add.js": "/js/admin/brands/add.js",
     "/js/admin/customers/index.js": "/js/admin/customers/index.js",
     "/js/admin/customers/add.js": "/js/admin/customers/add.js",
+    "/js/admin/customer_subscribes/index.js": "/js/admin/customer_subscribes/index.js",
     "/js/admin/news/index.js": "/js/admin/news/index.js",
     "/js/admin/news/add.js": "/js/admin/news/add.js",
     "/js/admin/products/index.js": "/js/admin/products/index.js",
